--- a/UpgradeSystemComponent/Packages/ie.setu.upgradesystem/package.json
+++ b/UpgradeSystemComponent/Packages/ie.setu.upgradesystem/package.json
@@ -1,7 +1,11 @@
 {
     "name": "ie.setu.upgradesystem",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "displayName": "UpgradeSystem",
     "description": "A Component for adding Upgrade Systems",
-    "unity": "2022.3"
+    "unity": "2022.3",
+    "dependencies": {
+        "com.unity.textmeshpro": "3.0.9",
+        "ie.setu.eventmanager": "https://github.com/itcOnlineGaming/EventManager.git?path=/Packages/ie.setu.eventManager#v1.0.2"
+    }
 }
