--- a/UpgradeSystemComponent/Packages/manifest.json
+++ b/UpgradeSystemComponent/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "ie.setu.eventmanager": "https://github.com/itcOnlineGaming/EventManager.git?path=/Packages/ie.setu.eventManager#v1.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
